versioned_docs/version-2025.2.7/professor/leiliane_cristine_de_souza.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Leiliane Cristine de Souza",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Sanidade Animal - 1092",
          "size": 2,
          "teachers": [
            "Leiliane Cristine de Souza"
          ],
          "classroom": "sala_12-2",
          "students": [
            "AGO2023"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Produção Animal I - 628",
          "size": 3,
          "teachers": [
            "Leiliane Cristine de Souza"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Orientação de Estágio Supervisionado - 1097",
          "size": 1,
          "teachers": [
            "Leiliane Cristine de Souza"
          ],
          "classroom": "laboratorio_de_informatica_b",
          "students": [
            "AGO2023"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Produção Animal II - 1093",
          "size": 3,
          "teachers": [
            "Leiliane Cristine de Souza"
          ],
          "classroom": "sala_12-2",
          "students": [
            "AGO2023"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": []
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Leiliane Cristine de Souza

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

